--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ header.sticky {
   position: absolute;
   z-index: 1;
   inset: 0;
-  background: url('img/wallpapercnel.jpg') center center/cover no-repeat;
+  background: url('img//wallpapercne1.jpg') center center/cover no-repeat;
   filter: brightness(0.62);
   animation: fadeInBg 1.6s cubic-bezier(.32,.81,.45,1) forwards;
 }
@@ -1125,3 +1125,4 @@ tab-btn-footer:hover {
 /* ========================================================================== */
 /* FIN style.css                                                               */
 /* ========================================================================== */
+
